implement db